Fairly significant overhaul of monotonicity marking
Also:
  * Incorporated fracas test suite
  * Added UNK token to dictionary
  * Incorporated Ollie server
  * Prolly some other stuff too?